# CurveLib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cxx
include/: Circle.h  Core.h  Curve.h  Ellipse.h  Helix.h  Point.h  core_headers.h
src/: Circle.cpp  Core.cpp  Ellipse.cpp  Helix.cpp  Point.cpp
